refactor: grammar nazi